--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+
+    <!-- Page Title and Description -->
+    <title>Trainer Certification Verification - Brookbush Institute</title>
+    <meta name="description" content="Verify the credentials of certified personal trainers and movement specialists. Search by trainer name or certification ID to confirm authentic Brookbush Institute certifications." />
+
+    <!-- Open Graph Meta Tags for Social Media -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Trainer Certification Verification - Brookbush Institute" />
+    <meta property="og:description" content="Verify the credentials of certified personal trainers and movement specialists. Search by trainer name or certification ID to confirm authentic Brookbush Institute certifications." />
+    <meta property="og:image" content="/src/assets/brookbush-institute-logo-dark_1754440730073.webp" />
+    <meta property="og:url" content="https://brookbushinstitute.com" />
+    <meta property="og:site_name" content="Brookbush Institute" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Trainer Certification Verification - Brookbush Institute" />
+    <meta name="twitter:description" content="Verify the credentials of certified personal trainers and movement specialists." />
+    <meta name="twitter:image" content="/src/assets/brookbush-institute-logo-dark_1754440730073.webp" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/src/assets/brookbush-institute-logo-dark_1754440730073.webp" />
   </head>
   <body>
     <div id="root"></div>
