add public folder

--- a/client/index.html
+++ b/client/index.html
@@ -20,11 +20,8 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Trainer Certification Verification - Brookbush Institute" />
     <meta name="twitter:description" content="Verify the credentials of certified personal trainers and movement specialists." />
-    <meta name="twitter:image" content="/src/assets/verification.png" />
-    <meta name="twitter:image" content="/src/assets/brookbush-institute-logo-dark_1754440730073.webp" />
-
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/src/assets/brookbush-institute-logo-dark_1754440730073.webp" />
+    <meta property="og:image" content="https://brookbushinstitute.info/verification.png" />
+    <meta name="twitter:image" content="https://brookbushinstitute.info/verification.png" />
   </head>
   <body>
     <div id="root"></div>
